/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2021-12-07 08:57 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * cimgui/hbarrays.cpp
  * ChangeLog.txt
    ! correct hb_igIntsPush() c&p typos

  * sokol/hbsokol.c
    + expose sapp_quit(), sapp_request_quit(), sapp_cancel_quit()
      to .prg code

    * handle SAPP_EVENTTYPE_QUIT_REQUESTED event, add ImQuit()
      procedure to your .prg code to get notified about it
      On desktop platform you can call sapp_cancel_quit() from
      the ImQuit() to prevent exiting. For example if
      [x] close button was clicked and you wan to display
      some confirmation popup. This can be also used to hide
      ImGui window instead of closing if your application is
      multithreaded, where another window can be Harbour GT too.

   + examples/procdbf.prg
   + examples/test.dbf
     + added multi-threading example of DO WHILE ! EoF() ; DBSkip()
       file processing using codeblock and statics to interact
       with the display

2021-12-06 12:58 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + meta-rebuild.hbp
  + meta-rebuild-docking.hbp
  * cimgui-docking/cimgui.hbp
  * cimgui/cimgui.hbp
  * cimplot/cimplot.hbp
  * sokol/sokol.hbp
    + updated project files, to be able to build or switch
      to docking/other branch, just by doing either:
      hbmk2 meta-rebuild.hbp
      or
      hbmk2 meta-rebuild-docking.hbp

  * cimplot/hbimplot.cpp
    * handle ImPlotTime struct using non-garbage-collected
      pointer (unsafe!) 

  + examples/implot/wmake.sh
    + emscripten helper build script

2021-12-05 19:03 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * cimplot/implot.ch
    + added translation rule for ImPlot:: namespace

  + cimplot/implots.cpp
    + added ImPlot graphing wrappers: their variants expecting float